@@ -14,4 +14,18 @@ my $obj = Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog->new;
 print encode_utf8(scalar Wikibase::Datatype::Print::Item::print($obj));
 
 # Output:
-# TODO
+# Label: dog (en)
+# Description: domestic animal (en)
+# Aliases:
+#   domestic dog (en)
+#   Canis lupus familiaris (en)
+#   Canis familiaris (en)
+#   dogs (en)
+#   🐶 (en)
+#   🐕 (en)
+# Sitelinks:
+#   Dog (enwiki)
+# Statements:
+#   P31: Q55983715 (normal)
+#    P642: Q20717272
+#    P642: Q26972265
